src/objects/sma__MAShift__c.object
<CustomObject>
    <fields>
        <fullName>sma__BreakDuration__c</fullName>
        <label>Break Duration (Minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__BreakEndHour__c</fullName>
        <label>Break End Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__BreakEndMinute__c</fullName>
        <label>Break End Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__BreakStartHour__c</fullName>
        <label>Break Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__BreakStartMinute__c</fullName>
        <label>Break Start Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sma__EndAddress__c</fullName>
        <label>End Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__EndHour__c</fullName>
        <label>End Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__EndLocation__c</fullName>
        <label>End Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sma__EndMinute__c</fullName>
        <label>End Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__ResourceId__c</fullName>
        <label>Resource Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__StartAddress__c</fullName>
        <label>Start Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__StartHour__c</fullName>
        <label>Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__StartLocation__c</fullName>
        <label>Start Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sma__StartMinute__c</fullName>
        <label>Start Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MapAnything Shift</label>
    <nameField>
        <displayFormat>Shift-{0}</displayFormat>
        <label>MapAnything Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>